@@ -174,6 +174,7 @@ Rob Savoye		rob@cygnus.com
 Robert Bihlmeyer	robbe@orcus.priv.at
 Robert Boehne		rboehne@ricardo-us.com
 Robert Collins		robert.collins@itdomain.com.au
+Ronald Landheer		ronald@landheer.com
 Rusty Ballinger		rusty@rlyeh.engr.sgi.com
 Ryan T. Sammartino	ryants@shaw.ca
 Sam Hocevar		sam@zoy.org
