@@ -23,13 +23,24 @@
 
 . ./defs || exit 1
 
+set -e
+
 cat > Makefile.am << 'END'
 README:
 	echo 'I bet you are reading me.' > README
 END
 
-$ACLOCAL || exit 1
-$AUTOMAKE || exit 1
+# Files required by --gnu
+: > NEWS
+: > AUTHORS
+: > ChangeLog
+
+$ACLOCAL
+
+# Should not warn about missing README, since it is a target.
+$AUTOMAKE --add-missing --gnu >stdout 2>&1
+cat stdout
+grep README stdour && exit 1
 
 sed -n -e '/^DIST_COMMON =.*\\$/ {
    :loop
@@ -38,4 +49,11 @@ sed -n -e '/^DIST_COMMON =.*\\$/ {
    /\\$/ b loop
    p
    n
-   }' -e '/^DIST_COMMON =/ p' Makefile.in | grep README || exit 1
+   }' -e '/^DIST_COMMON =/ p' Makefile.in | grep README
+
+
+# Should warn about missing README.
+: > Makefile.am
+$AUTOMAKE --add-missing --gnu 2>stderr && exit 1
+cat stderr
+grep README stderr
